# omnipkg

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  OMNIPKG_CODE_COMPARISON.txt  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  arch-support.json  arm64-support.json  build_hooks.py  cli_handler.py  conftest.py  docker-entrypoint.sh  mkdocs.yml  mkdocs.yml.backup  mkdocs.yml.clean  netlify.toml  omnipkg.gemspec  omnipkg_activate.py  patcher_changes.txt  piwheels-arm32.json  platform-support.json  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-trace.txt  requirements.txt  setup.py  setup_atomic.py  tat  test_daemon_simple.py  vercel.json
.ci_support/: linux-ppc64le_.yaml  linux_aarch64_.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  piwheels-stats.md  platform-matrix.json
.github/workflows/: adoption_test.yml  anchore.yml  apisec-scan.yml  arm64-verification.yml  auto-merge-to-main.yml  backfill_omnipkg_wheels.yml  bandit.yml  basic_package_upgrade.yml  bearer.yml  black-duck-security-scan-ci.yml  build-docker-images.yml  checkmarx.yml  cloudrail.yml  codacy.yml  codeql.yml  conda_build.yml  contrast-scan.yml  cross-platform-build-verification.yml  cross-platform-python-flask-test.yml  cross-platform-test.yml  cross-playform-sanity-test.yml  cross_interpreter_installs.yml  crunch42.yml  debug-flask-port-finder.yml  debug-windows-flask-port-finder.yml  debug_dispatcher_installs.yml  defender-for-devops.yml  demo-matrix-test.yml  devskim.yml  docker-ci-ghcr.yml  docker-release-dockerhub  docker.yml  endorlabs.yml  ethicalcheck.yml  flask-port-cross-platform-test.yml  flask_port_finder_test.yml  fortify.yml  gem-push.yml  generator-generic-ossf-slsa3-publish.yml  hadolint.yml  (+68 more)
RECOVERED_BLOBS/: 1be8d30df6c6db28f8a38a44626a5d83ccd3017c_12549bytes.py  8aa36734df8e4ac9b90f064e54a0cb74d6332837_14898bytes.py
cloud/: worker.js  wrangler.toml
docker/: Dockerfile.alpine  Dockerfile.cuda  Dockerfile.debian  Dockerfile.dev  Dockerfile.fedora  Dockerfile.ml  Dockerfile.science  Dockerfile.ubuntu  README.md  requirements-ml.txt  requirements-science.txt
docs/: LIBRESOLVER.md  advanced_management.md  cli_commands_reference.md  conf.py  future_roadmap.md  getting_started.md  index.md  python_hot_swapping.md  requirements.txt  runtime_switching.md
docs/architecture_performance/: .pages.yml  architecture_performance_benchmarking_vs_the_world.md  architecture_performance_deep_dive_the_daemon.md  index.md
docs/assets/css/: interact.css
docs/assets/javascripts/: trailing-slash.js
docs/assets/js/: interact.js
docs/cli_commands/: .pages.yml  cli_commands_details.md  cli_commands_overview.md  cli_commands_run.md  index.md
docs/demos/: .pages.yml  demos_c_extension_switching.md  demos_concurrent_multiverse.md  demos_multiverse_healing.md  demos_rich_module_switching.md  demos_script_healing.md  demos_tensorflow_dependency_switching.md  demos_uv_binary_switching.md  index.md
docs/platform_support/: .pages.yml  index.md  platform_support_ci_verification.md
lib/: omnipkg.rb
lib/omnipkg/: version.rb
licenses/: cryptography-wasm.txt  filelock-lts.txt  urllib3-lts.txt
locale/: omnipkg.pot
newfeatures/: core.py  demo.py  package_meta_builder.py  stress_test.py
newfeatures/newfeatures2/examples/: testflask.py
newfeatures/newfeatures2/omnipkg/: core.py
newfeatures/newfeatures3/: core.py  debug_omnipkg.py
newfeatures/newfeatures3/omnipkg/: cli.py  core.py  debugredis.py  goodbyedocker
omnipkg/: 8pkg.py  CondaGuard.py  __init__.py  __main__.py  activator.py  cache.py  cli.py  common_utils.py  core.py  demo.py  deptimemachine.py  i18n.py  libresolver.py  loader.py  package_meta_builder.py  stress_test.py
omnipkg/commands/: run.py
omnipkg/conda-recipe/: meta.yaml
omnipkg/locale/: omnipkg.pot
omnipkg/utils/: ai_import_healer.py  flask_port_finder.py
public_site/: index.html
src/omnipkg/: CondaGuard.py  __init__.py  __main__.py  _help.h  _help.py  cli.py  common_utils.py  core.py  dispatcher  dispatcher.c  dispatcher.py  ghost.c  help.toml  i18n.py  libresolver.py  loader.py  lockmanager.py  omnipkg_dispatch  package_meta_builder.py
src/omnipkg/apis/: local_bridge.py
src/omnipkg/commands/: run.py
src/omnipkg/conda-recipe/: meta-noarch.yaml  meta-platform.yaml  meta.yaml
src/omnipkg/conda-recipes/: meta-noarch.yaml  meta-platforms.yaml
src/omnipkg/installation/: dependency_constraints.py  installers.py  metadata_cache.py  package_index_registry.py  smart_install.py  verification_groups.py  verification_hooks.py  verification_strategy.py
src/omnipkg/integration/: ci_integration.py  cli_executor.py  environment.py  reproducible.py
src/omnipkg/isolation/: __init__.py  atomic_ops.c  fs_lock_queue.py  fs_watcher.py  (+11 more)
src/tests/: demo_multiverse_gauntlet.py  gpu_ring_buffer_poc.py  quantum_chaos.py  test_cli_healing.py  test_concurrency_optimization.py  test_concurrent_install.py  test_flask_port_finder.py  test_flask_port_finder_universal.py  test_loader_stress_test.py  test_multiverse_healing.py  test_native_ipc_proper.py  test_old_flask.py  test_old_flask_dev.py  test_old_rich.py  test_rich_switching.py  test_swap_install.py  test_tensorflow_switching.py  test_uv_switching.py  test_version_combos.py
templates/: index.html
tests/: conftest.py  debug_flask.py  diag_uv_ffi.py  multiverse_analysis.py  multiverse_healing.py  pip_multiverse_analysis.py  quantum_chaos.py  test_concurrent_install.py  test_dispatcher_contracts.py  test_ffi_verify.py  test_flask_port_finder.py  test_old_flask.py  test_old_flask_dev.py  test_old_flask_disabled.py  test_old_rich.py  test_omnipkg_contracts.py  test_rich_switching.py  test_swap_install.py  test_tensorflow_switching.py  test_uv_ffi_contracts.py  test_uv_switching.py  test_verify_bubble_deps.py  test_verify_bubble_deps2.py  test_version_combos.py
tools/dispatcher_bin/: _post_install.py  build.sh  dispatcher.c
tools/uv_ffi/: build.sh
(+126 files in other folders)
