[build-system]
# Python 3.7 compatible setuptools (newer versions require Python 3.8+)
requires = ["setuptools>=50.0,<70.0", "wheel"]
build-backend = "build_hooks"
backend-path = ["."]

[project]
name = "omnipkg"
version = "2.4.0"
authors = [
  { name = "1minds3t", email = "1minds3t@proton.me" },
]
description = "Universal Python Runtime Orchestrator. One environment. Infinite Pythons and packages. Zero conflicts."
readme = "README.md"
requires-python = ">=3.7, <3.16"

# Use old-style license for Python 3.7 compatibility
license = { text = "AGPL-3.0-only OR LicenseRef-Proprietary" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "requests>=2.20",
    "psutil>=5.9.0",
    "typer>=0.4.0",
    "rich>=10.0.0",

    # werkzeug - pinned to last available per Python, CVEs unresolved due to Python constraints
    # TODO: werkzeug-lts needed for py37/py38 to backport CVE-2026-27199, CVE-2026-21860, CVE-2025-66221
    "werkzeug>=3.0.6; python_version == '3.8'",  # stuck - upstream dropped 3.8 before 3.1.x
    "werkzeug>=2.2.3; python_version == '3.7'",  # stuck - upstream dropped 3.7 before 3.1.x
    "werkzeug>=3.1.6; python_version >= '3.9'",  # fully patched

    # Filelock: LTS backport for <3.10, official for >=3.10
    # Filelock CVE floor for CVE-2026-22701
    "filelock>=3.20.3; python_version >= '3.10'",
    "filelock-lts>=2025.68146.2; python_version < '3.10'",
    
    # Packaging version splits - CRITICAL: pip-audit needs >=21.0 on ALL versions
    "packaging>=21.0,<22.0; python_version < '3.10'",
    "packaging>=23.0; python_version >= '3.10'",
    
    # tomli backport for Python < 3.11
    "tomli>=1.0.0; python_version < '3.11'",
    
    # typing-extensions backport
    "typing-extensions>=4.0.0; python_version < '3.10'",
    
    # importlib-metadata backport
    "importlib-metadata>=1.0; python_version < '3.8'",
    
    # dataclasses backport
    "dataclasses>=0.6; python_version == '3.7'",
    
    # Authlib - version split by Python
    "authlib>=1.6.5; python_version >= '3.9'",        # Patched for recent CVEs
    "authlib>=1.3.2,<1.4.0; python_version == '3.8'", # Max support for 3.8
    "authlib>=1.2.1,<1.3.0; python_version == '3.7'", # Last known stable for 3.7
    # TODO: Create authlib-lts to backport security fixes for Python 3.7-3.8
    
    # aiohttp - Best available versions per Python
    # Note: Python 3.7-3.8 have known CVEs due to upstream EOL. See SECURITY.md
    "aiohttp>=3.8.6,<3.9.0; python_version == '3.7'",    # Last Py3.7 version (20 known CVEs)
    "aiohttp>=3.10.11,<3.11.0; python_version == '3.8'", # Last Py3.8 version (9 known CVEs)
    "aiohttp>=3.13.3; python_version >= '3.9'",          # Latest with all patches
    #aiohttp-lts on to-do list for pythons 3.7 and 3.8
    
    # Security scanning
    # safety moved to optional 'audit' extra due to CVE-2025-14009 in nltk dependency
    # pip-audit is now the primary default scanner for all versions
    "pip-audit>=2.0.0",
    
    # uv
    "uv>=0.9.6; python_version >= '3.8'",

    # CVE-safe urllib3
    "urllib3-lts>=2026.21441; python_version < '3.10'",
    "urllib3>=2.6.3; python_version >= '3.10'",

    # Flask CVE floor for CVE-2026-27205
    # TODO: flask-lts needed for py37/py38 to backport CVE-2026-27205
    "flask>=3.0.3; python_version == '3.8'",  # stuck - upstream dropped 3.8 before 3.1.x
    "flask>=2.2.5; python_version == '3.7'",  # stuck - upstream dropped 3.7 before 3.1.x
    "flask>=3.0.3; python_version >= '3.9'",  # latest available, CVE-2026-27205 unpatched until 3.1.3 lands

    # Flask-CORS for interactive docs
    "flask-cors>=3.0,<4.0; python_version < '3.8'",
    "flask-cors>=3.0; python_version >= '3.8'",

]

[project.optional-dependencies]
full = [
    "tqdm>=4.67.1",  # CVE-2024-34062 patched
    "python-magic>=0.4.18",
    "redis>=4.0.0,<5.0; python_version == '3.7'",
    "redis>=5.0; python_version >= '3.8'",
    # Includes audit tools
    "safety>=3.7.0; python_version >= '3.10' and python_version < '3.14'",
    "marshmallow>=4.1.2; python_version >= '3.10'",
]

dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0; python_version >= '3.8'",
    "ruff>=0.1.0; python_version >= '3.8'",
]

[project.urls]
"Homepage" = "https://omnipkg.pages.dev/"
"Repository" = "https://github.com/1minds3t/omnipkg"
"Live Interactive Console" = "https://1minds3t.echo-universe.ts.net/omnipkg/"
"Bug Tracker" = "https://github.com/1minds3t/omnipkg/issues"
"Conda-Forge" = "https://anaconda.org/conda-forge/omnipkg"
"Docker Hub" = "https://hub.docker.com/r/1minds3t/omnipkg"

[project.scripts]
omnipkg = "omnipkg.dispatcher:main"
8pkg = "omnipkg.dispatcher:main"
OMNIPKG = "omnipkg.dispatcher:main"
8PKG = "omnipkg.dispatcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["omnipkg*", "omnipkg.*", "tests*"]
exclude = [
    "build*",
    "dist*",
    "*.egg-info*",
    "dev_tools*",
]

[tool.setuptools.package-data]
omnipkg = [
    "locale/**/*.mo",
    "locale/**/*.pot",
]

[tool.setuptools]
# Old setuptools format (compatible with setuptools 50.x)
license-files = ["LICENSE", "COMMERCIAL_LICENSE.md"]
include-package-data = true

[tool.pytest.ini_options]
continue_on_collection_errors = true